Form's adv-vtypes exampe
Including triggers, and date pickers

--- a/examples/form/adv-vtypes.html
+++ b/examples/form/adv-vtypes.html
@@ -1,13 +1,20 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title>Advanced VType Examples</title>
+    <title>Advanced VType Examples</title>
 
-<link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css" />
- 	<script type="text/javascript" src="../../adapter/ext/ext-base.js"></script>
-  <script type="text/javascript" src="../../ext-all-debug.js"></script>
-  
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
+
+    <!-- GC -->
+    <!-- LIBS -->
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
+    <!-- ENDLIBS -->
+
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
+
   <script type="text/javascript" src="adv-vtypes.js"></script>
   <script type="text/javascript" src="states.js"></script>
 
@@ -15,7 +22,7 @@
 <link rel="stylesheet" type="text/css" href="../shared/examples.css" />
 </head>
 
-<body>
+<body dir="rtl">
 <h1>Advanced Validation Examples Using VTypes</h1>
 
 <div id="dr"><p>The first example shows two date fields acting as a date range.  Selecting an initial date
