--- a/examples/form/check-radio.html
+++ b/examples/form/check-radio.html
@@ -1,13 +1,20 @@
-<html> 
+<html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <title>Checkbox / Radio Groups</title>
-    <link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css" />
-    <script type="text/javascript" src="../../adapter/ext/ext-base.js"> </script>
-    <script type="text/javascript" src="../../ext-all-debug.js"> </script>
-    
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
+
+    <!-- GC -->
+    <!-- LIBS -->
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
+    <!-- ENDLIBS -->
+
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
+
     <script type="text/javascript" src="check-radio.js"> </script>
-    
+
     <link rel="stylesheet" type="text/css" href="../shared/examples.css" />
     <style>
         .x-check-group-alt {
@@ -17,7 +24,7 @@
         }
     </style>
 </head>
-<body>
+<body dir="rtl">
     <h1>Checkbox / Radio Groups</h1>
     <p>This demonstrates the flexible layout capabilities of the CheckboxGroup and RadioGroup classes. It also
     shows that you can validate checkboxes/radios as a group &mdash; try submitting the form before changing
