--- a/examples/tabs/tab-scroller-menu.html
+++ b/examples/tabs/tab-scroller-menu.html
@@ -1,36 +1,38 @@
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <title>Advanced Tabs</title>
     <link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css" />
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
 
     <!-- GC -->
- 	<!-- LIBS -->
- 	<script type="text/javascript" src="../../adapter/ext/ext-base.js"></script>
- 	<!-- ENDLIBS -->
+    <!-- LIBS -->
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
+    <!-- ENDLIBS -->
 
-    <script type="text/javascript" src="../../ext-all.js"></script>
-
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
 
     <link rel="stylesheet" type="text/css" href="tab-scroller-menu.css" />
-    
+
     <script type="text/javascript" src="TabScrollerMenu.js"></script>
     <script type="text/javascript" src="tab-scroller-menu.js"></script>
     <!-- Common Styles for the examples -->
 
     <link rel="stylesheet" type="text/css" href="../shared/examples.css" />
 
-</head> 
-<body>
+</head>
+<body dir="rtl">
 
     An Example of a "Tab Scroller Menu" plugin.  <p>The js is not minified so it is readable. See <a href="tab-scroller-menu.js">tab-scroller-menu.js</a>.</p>
-    
+
     In order to use this plugin in your code, you need the following files:
     <ul>
         <li> <a href="tab-scroller-menu.css">tab-scroller-menu.css</a> : Required CSS file.
         <li> <a href="tab-scroller-menu.gif">tab-scroller-menu.gif</a> : Required GIF Sprite.
         <li> <a href="TabScrollerMenu.js">TabScrollerMenu.js</a> : The actual plugin code.
     </ul>
- 
+
 </body>
 </html>
