--- a/examples/grid/edit-grid.html
+++ b/examples/grid/edit-grid.html
@@ -1,16 +1,18 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Editor Grid Example</title>
 
-<link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css" />
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
 
     <!-- GC -->
- 	<!-- LIBS -->
- 	<script type="text/javascript" src="../../adapter/ext/ext-base.js"></script>
- 	<!-- ENDLIBS -->
+    <!-- LIBS -->
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
+    <!-- ENDLIBS -->
 
-    <script type="text/javascript" src="../../ext-all.js"></script>
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
 
     <script type="text/javascript" src="GroupingView.js"></script>
     <script type="text/javascript" src="edit-grid.js"></script>
@@ -19,7 +21,7 @@
 <!-- Common Styles for the examples -->
 <link rel="stylesheet" type="text/css" href="../shared/examples.css" />
 </head>
-<body>
+<body dir="rtl">
 <script type="text/javascript" src="../shared/examples.js"></script><!-- EXAMPLES -->
 <h1>Editor Grid Example</h1>
 <p>This example shows how to create a grid with inline editing.</p>
