Fixed grid3.html example

--- a/examples/grid/from-markup.html
+++ b/examples/grid/from-markup.html
@@ -1,25 +1,28 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>From Markup Grid Example</title>
-<link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css" />
-<!-- GC -->
- 	<!-- LIBS -->
- 	<script type="text/javascript" src="../../adapter/ext/ext-base.js"></script>
- 	<!-- ENDLIBS -->
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
 
-<script type="text/javascript" src="../../ext-all.js"></script>
-<script type="text/javascript" src="from-markup.js"></script>
-<link rel="stylesheet" type="text/css" href="grid-examples.css" />
-<!-- Common Styles for the examples -->
-<link rel="stylesheet" type="text/css" href="../shared/examples.css" />
-<style type="text/css">
-#the-table { border:1px solid #bbb;border-collapse:collapse; }
-#the-table td,#the-table th { border:1px solid #ccc;border-collapse:collapse;padding:5px; }
+    <!-- GC -->
+    <!-- LIBS -->
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
+    <!-- ENDLIBS -->
+
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
+    <script type="text/javascript" src="from-markup.js"></script>
+    <link rel="stylesheet" type="text/css" href="grid-examples.css" />
+    <!-- Common Styles for the examples -->
+    <link rel="stylesheet" type="text/css" href="../shared/examples.css" />
+    <style type="text/css">
+    #the-table { border:1px solid #bbb;border-collapse:collapse; width:40% }
+    #the-table td,#the-table th { border:1px solid #ccc;border-collapse:collapse;padding:5px; }
 </style>
 </head>
-<body>
+<body dir="rtl">
 <script type="text/javascript" src="../shared/examples.js"></script><!-- EXAMPLES -->
 <h1>From Markup Grid Example</h1>
 <p>This example shows how to create a grid with from an existing, unformatted HTML table.</p>
