--- a/examples/message-box/msg-box.html
+++ b/examples/message-box/msg-box.html
@@ -1,15 +1,18 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>MessageBox</title>
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
 
-    <link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css" />
     <!-- GC -->
-        <!-- LIBS -->
-        <script type="text/javascript" src="../../adapter/ext/ext-base.js"></script>
-        <!-- ENDLIBS -->
+    <!-- LIBS -->
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
+    <!-- ENDLIBS -->
 
-    <script type="text/javascript" src="../../ext-all.js"></script>
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
+
     <script type="text/javascript" src="msg-box.js"></script>
 
     <!-- Common Styles for the examples -->
@@ -17,12 +20,12 @@
 
     <style type="text/css">
         .x-window-dlg .ext-mb-download {
-            background:transparent url(images/download.gif) no-repeat top left;
+            background:transparent url(images/download.gif) no-repeat top right;
             height:46px;
         }
     </style>
 </head>
-<body>
+<body dir="rtl">
 <script type="text/javascript" src="../shared/examples.js"></script><!-- EXAMPLES -->
 <h1>MessageBox Dialogs</h1>
 <p>The example shows how to use the MessageBox class. Some of the buttons have animations, some are normal.</p>
