--- a/examples/window/hello.html
+++ b/examples/window/hello.html
@@ -1,17 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <title>Hello World Window Example</title>
-    <link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css" />
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
 
     <!-- GC -->
- 	<!-- LIBS -->
- 	<script type="text/javascript" src="../../adapter/ext/ext-base.js"></script>
- 	<!-- ENDLIBS -->
+    <!-- LIBS -->
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
+    <!-- ENDLIBS -->
 
-    <script type="text/javascript" src="../../ext-all.js"></script>
-
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
     <script language="javascript" src="hello.js"></script>
 
 <!-- Common Styles for the examples -->
@@ -24,23 +25,23 @@
     }
     </style>
 </head>
-<body>
+<body dir="rtl">
 <script type="text/javascript" src="../shared/examples.js"></script><!-- EXAMPLES -->
 
 <h1>Hello World Window</h1>
 <p>This example shows how to create a very simple modal Window with "autoTabs" from existing markup.</p>
-<input type="button" id="show-btn" value="Hello World" /><br /><br />
+<input type="button" id="show-btn" value="שלום עולם" /><br /><br />
 <p>Note that the js is not minified so it is readable. See <a href="hello.js">hello.js</a> for the full source code.</p>
 
 <div id="hello-win" class="x-hidden">
-    <div class="x-window-header">Hello Dialog</div>
+    <div class="x-window-header">חלון שלום</div>
     <div id="hello-tabs">
         <!-- Auto create tab 1 -->
-        <div class="x-tab" title="Hello World 1">
+        <div class="x-tab" title="שלום עולם 1">
             <p>Hello...</p>
         </div>
         <!-- Auto create tab 2 -->
-        <div class="x-tab" title="Hello World 2">
+        <div class="x-tab" title="שלום עולם 2">
             <p>... World!</p>
         </div>
     </div>
