Adopted window's gmap example

--- a/examples/window/gmap.html
+++ b/examples/window/gmap.html
@@ -1,15 +1,17 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <title>GMap Window Example</title>
-    <link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css" />
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
 
     <!-- GC -->
- 	<!-- LIBS -->
- 	<script type="text/javascript" src="../../adapter/ext/ext-base.js"></script>
- 	<!-- ENDLIBS -->
+    <!-- LIBS -->
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
+    <!-- ENDLIBS -->
 
-    <script type="text/javascript" src="../../ext-all.js"></script>
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
 
 <!-- GMaps API Key that works for www.extjs.com -->
 <!--<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAA2CKu_qQN-JHtlfQ5L7BLlRRadLUjZPtnrRT4mXZqcP4UUH-2OxREmPm3GpN_NHsHuvuHd-QKI4YoRg" type="text/javascript"></script>-->
@@ -30,12 +32,12 @@
     }
     </style>
 </head>
-<body>
+<body dir="rtl">
 <script type="text/javascript" src="../shared/examples.js"></script><!-- EXAMPLES -->
 
 <h1>GMap Window</h1>
 <p>This example shows how to create an extension and utilize an external library.</p>
-<input type="button" id="show-btn" value="Gimme a Map" /><br /><br />
+<input type="button" id="show-btn" value="הצג מפה" /><br /><br />
 <p>Note that the js is not minified so it is readable. See <a href="Ext.ux.GMapPanel.js">Ext.ux.GMapPanel.js</a> and <a href="gmap.js">gmap.js</a> for the full source code.</p>
 
 </body>
